--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0"
   },
