--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
     "next": "16.0.3",
     "react": "19.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
