--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "incremental": true,
     "plugins": [
       {
+  "compilerOptions": {
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "strict": true,
+    "esModuleInterop": true
+  }
+}
+{
         "name": "next"
       }
     ],
