--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@hello-pangea/dnd": "^18.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
